--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "includes/c-helper-macros"]
 	path = includes/c-helper-macros
 	url = https://github.com/rhempel/c-helper-macros
+[submodule "unity"]
+	path = unity
+	url = https://github.com/ThrowTheSwitch/Unity.git
