[UMM-53] Allow command line override of config file

--- a/project.yml
+++ b/project.yml
@@ -40,21 +40,19 @@
   # in order to add common defines:
   #  1) remove the trailing [] from the :common: section
   #  2) add entries to the :common: section (e.g. :test: has TEST defined)
-  :common: &common_defines []
+  :common: &common_defines
+    - TEST
+    - UMM_INFO
+    - UMM_TEST_BUILD
+    - UMM_INTEGRITY_CHECK
+    - UMM_POISON_CHECK
+    - UMM_CFGFILE="<umm_malloc_cfgport.h>"
+
   :test:
     - *common_defines
-    - TEST
-    - UMM_INFO
-    - UMM_TEST_BUILD
-    - UMM_INTEGRITY_CHECK
-    - UMM_POISON_CHECK
+
   :test_preprocess:
     - *common_defines
-    - TEST
-    - UMM_INFO
-    - UMM_TEST_BUILD
-    - UMM_INTEGRITY_CHECK
-    - UMM_POISON_CHECK
 
 :cmock:
   :mock_prefix: mock_
