[UMM-58] Add gcov support to the project

--- a/project.yml
+++ b/project.yml
@@ -41,7 +41,7 @@
   # in order to add common defines:
   #  1) remove the trailing [] from the :common: section
   #  2) add entries to the :common: section (e.g. :test: has TEST defined)
-  :common: &common_defines
+  :common: &common_defines []
 
   :test:
     - *common_defines
@@ -66,12 +66,12 @@
 # Add -gcov to the plugins list to make sure of the gcov plugin
 # You will need to have gcov and gcovr both installed to make it work.
 # For more information on these options, see docs in plugins/gcov
-# :gcov:
-#     :html_report: TRUE
-#     :html_report_type: detailed
-#     :html_medium_threshold: 75
-#     :html_high_threshold: 90
-#     :xml_report: FALSE
+:gcov:
+    :html_report: TRUE
+    :html_report_type: detailed
+    :html_medium_threshold: 75
+    :html_high_threshold: 90
+    :xml_report: FALSE
 
 #:tools:
 # Ceedling defaults to using gcc for compiling, linking, etc.
@@ -95,4 +95,5 @@
     - stdout_pretty_tests_report
     - module_generator
     - raw_output_report
+    - gcov
 ...
